k8s/production.template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eventapi
  namespace: app
spec:
  selector:
    matchLabels:
      app: eventapi
  template:
    metadata:
      labels:
        app: eventapi
    spec:
      terminationGracePeriodSeconds: 60
      volumes:
        - name: config
          configMap:
            name: eventapi-config
            defaultMode: 420
      containers:
        - name: eventapi
          image: ${IMAGE}
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
            - name: metrics
              containerPort: 9100
              protocol: TCP
            - name: health
              containerPort: 9200
              protocol: TCP
            - name: pprof
              containerPort: 9300
              protocol: TCP
          lifecycle:
            preStop:
              exec:
                command:
                  - "sh"
                  - "-c"
                  - |
                    sleep 5 && echo "1" >> shutdown
          resources:
            limits:
              cpu: "1"
              memory: 2Gi
            requests:
              cpu: 100m
              memory: 2Gi
          volumeMounts:
            - name: config
              mountPath: /app/config.yaml
              subPath: config.yaml
          livenessProbe:
            tcpSocket:
              port: health
            initialDelaySeconds: 3
            timeoutSeconds: 5
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          readinessProbe:
            tcpSocket:
              port: health
            initialDelaySeconds: 3
            timeoutSeconds: 5
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: eventapi
  namespace: app
  labels:
    app: eventapi
spec:
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: http
    - name: metrics
      protocol: TCP
      port: 9100
      targetPort: metrics
    - name: health
      protocol: TCP
      port: 9200
      targetPort: health
    - name: pprof
      protocol: TCP
      port: 9300
      targetPort: pprof
  selector:
    app: eventapi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eventapi
  namespace: app
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/hostname: events.7tv.io
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - events.7tv.io
      secretName: 7tv-io-tls
  rules:
    - host: events.7tv.io
      http:
        paths:
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: eventapi
                port:
                  name: health
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eventapi
                port:
                  name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eventapi-old
  namespace: app
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/hostname: events.7tv.app
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - events.7tv.app
      secretName: 7tv-app-tls
  rules:
    - host: events.7tv.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eventapi
                port:
                  name: http
